--- a/src/app/app.second.component.html
+++ b/src/app/app.second.component.html
@@ -13,7 +13,7 @@
                 <div class="card" >
                         <div class="card-body">
                           <h4 class="card-title">News</h4>
-                          <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                          <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content yyyyyyyyyyyyyy.</p>
                           <a href="#" class="btn btn-primary">Go somewhere</a>
                         </div>
                 </div>
